fix warp overflow

--- a/src/assets/stylus/common.styl
+++ b/src/assets/stylus/common.styl
@@ -328,6 +328,8 @@ body
 .warp
   padding: 0 16px
   position: relative
+  height: 100%
+  overflow: auto
 
 .index
   padding-top: 0
